[gd_scene load_steps=19 format=4 uid="uid://cb4qj4a1o0ph4"]

[ext_resource type="Script" path="res://Scenes/level_1.gd" id="1_73ben"]
[ext_resource type="Texture2D" uid="uid://cw4fdxbmya5g1" path="res://Src/ground.jpg" id="1_j4qq8"]
[ext_resource type="Script" path="res://Scenes/camera_2d.gd" id="1_v25ph"]
[ext_resource type="PackedScene" uid="uid://bbnkfoxhlnvvm" path="res://Scenes/block.tscn" id="2_3k2pl"]
[ext_resource type="PackedScene" uid="uid://cgofr2yml3lpt" path="res://Scenes/pig.tscn" id="3_jm48a"]
[ext_resource type="Script" path="res://Scenes/birb_factory.gd" id="5_k4vgw"]
[ext_resource type="PackedScene" uid="uid://dp2mwx6fjoied" path="res://Scenes/sling.tscn" id="6_sbtp5"]
[ext_resource type="Script" path="res://Scenes/sling.gd" id="7_1ys5i"]
[ext_resource type="PackedScene" uid="uid://b0cdinvur3hgb" path="res://Scenes/dust.tscn" id="8_t0rj1"]
[ext_resource type="Texture2D" uid="uid://dy3el3julhrte" path="res://Src/parallax backgound pack/_11_background.png" id="9_x771o"]
[ext_resource type="Texture2D" uid="uid://8xb0xwkufa4m" path="res://Src/parallax backgound pack/_07_huge_clouds.png" id="10_bt72q"]
[ext_resource type="Texture2D" uid="uid://bfpdf8i3vc4ug" path="res://Src/parallax backgound pack/_05_hill1.png" id="11_n7h20"]
[ext_resource type="PackedScene" uid="uid://vgor2kenp54n" path="res://Scenes/pause_menu.tscn" id="12_3im1o"]
[ext_resource type="PackedScene" uid="uid://cyem7f8tr43kc" path="res://Scenes/game_over.tscn" id="14_c43t5"]
[ext_resource type="PackedScene" uid="uid://cvd40wqo0lwye" path="res://Scenes/block_wide.tscn" id="15_gn4xy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c26o5"]
texture = ExtResource("1_j4qq8")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, 128, -128, 128, 128, -128, 128)

[sub_resource type="TileSet" id="TileSet_m52cs"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 13
sources/0 = SubResource("TileSetAtlasSource_c26o5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjxu1"]
size = Vector2(1311, 561)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_73ben")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(374, -149)
limit_left = -200
limit_top = -500
limit_right = 1400
limit_bottom = 0
position_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("1_v25ph")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_m52cs")
metadata/_edit_lock_ = true

[node name="PlayableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableArea"]
position = Vector2(403.5, -255.5)
shape = SubResource("RectangleShape2D_xjxu1")

[node name="Block" parent="." instance=ExtResource("2_3k2pl")]
position = Vector2(540, -102)

[node name="Pig" parent="." instance=ExtResource("3_jm48a")]
position = Vector2(464, -34)

[node name="Pig2" parent="." instance=ExtResource("3_jm48a")]
position = Vector2(470, -238)

[node name="Block2" parent="." instance=ExtResource("2_3k2pl")]
position = Vector2(538, -241)

[node name="Block3" parent="." instance=ExtResource("2_3k2pl")]
position = Vector2(389, -34)

[node name="Block4" parent="." instance=ExtResource("2_3k2pl")]
position = Vector2(540, -34)

[node name="Block6" parent="." instance=ExtResource("2_3k2pl")]
position = Vector2(391, -102)

[node name="Block5" parent="." instance=ExtResource("2_3k2pl")]
position = Vector2(396, -241)

[node name="BirbFactory" type="Node2D" parent="."]
script = ExtResource("5_k4vgw")

[node name="Sling" parent="." instance=ExtResource("6_sbtp5")]
position = Vector2(-65, 0)
script = ExtResource("7_1ys5i")

[node name="CPUParticles2D" parent="." instance=ExtResource("8_t0rj1")]
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-333, -842)
motion_mirroring = Vector2(2048, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_x771o")
metadata/_edit_use_anchors_ = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-333, -842)
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(2048, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("10_bt72q")
metadata/_edit_use_anchors_ = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-333, -842)
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(2048, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_n7h20")
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="." instance=ExtResource("12_3im1o")]
visible = false
offset_right = 1152.0
offset_bottom = 648.0

[node name="GameOver" parent="." instance=ExtResource("14_c43t5")]
visible = false
offset_right = 1152.0
offset_bottom = 648.0

[node name="Block11" parent="." instance=ExtResource("15_gn4xy")]
position = Vector2(416, -172)

[node name="Block7" parent="." instance=ExtResource("15_gn4xy")]
position = Vector2(518, -172)

[connection signal="body_exited" from="PlayableArea" to="." method="_on_playable_area_body_exited"]
